







syntax = "proto3";

package pb;

service SecretService {
  rpc GetSecret(GetSecretRequest) returns (GetSecretResponse);
}

message GetSecretRequest {
  string name = 1;
}

message GetSecretResponse {
  string value = 1;
}













